fix around logo change , header name change and founder name

--- a/index.html
+++ b/index.html
@@ -2,32 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="https://fonts.googleapis.com/css2?family=Tiempos+Text:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="/logo.jpeg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Spark Tour and Travels - Best travel agency for tours, trips, and holiday packages across India."
-    />
-    <meta
-      name="keywords"
-      content="Travel, Tours, Holiday Packages, Spark Tour and Travels, India Trips"
-    />
-    <meta name="author" content="Spark Tour and Travels" />
+    <link href="https://fonts.googleapis.com/css2?family=Tiempos+Text:wght@400;600;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <!-- favicon - replace /logo.png with your actual icon path -->
+    <link rel="icon" type="image/png" href="/logo.png" />
 
-    <!-- Open Graph (for social media like FB, LinkedIn) -->
-    <meta property="og:title" content="Spark Tour and Travels" />
-    <meta
-      property="og:description"
-      content="Book your next trip with Spark Tour and Travels. Affordable packages & best experience."
-    />
-    <meta
-      property="og:image"
-      content="https://sparktourandtravels.in/cover.jpg"
-    />
-    <meta property="og:url" content="https://sparktourandtravels.in" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ghadi ki Dukan — Buy genuine watches and accessories online. Wide range of men's & women's watches, smartwatches, straps, and more at best prices." />
+    <meta name="keywords" content="Ghadi ki Dukan, watches, wristwatches, smartwatches, watch straps, watch accessories, buy watches online, Indian ecommerce" />
+    <meta name="author" content="Ghadi ki Dukan" />
+
+    <!-- Open Graph (for social sharing) -->
+    <meta property="og:title" content="Ghadi ki Dukan — Watches & Accessories" />
+    <meta property="og:description" content="Shop authentic watches, smartwatches and accessories at Ghadi ki Dukan. Fast delivery across India & secure payments." />
+    <!-- replace with a real cover image URL hosted on your site -->
+    <meta property="og:image" content="https://ghadikidukan.in/og-cover.jpg" />
+    <meta property="og:url" content="https://ghadikidukan.in" />
     <meta property="og:type" content="website" />
-    <title>Spark Tour and Travels</title>
+
+    <!-- Twitter card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ghadi ki Dukan — Watches & Accessories" />
+    <meta name="twitter:description" content="Shop authentic watches and watch accessories at Ghadi ki Dukan — best prices & secure checkout." />
+    <meta name="twitter:image" content="https://ghadikidukan.in/og-cover.jpg" />
+
+    <title>Ghadi ki Dukan</title>
+
+    <!-- optional: canonical -->
+    <link rel="canonical" href="https://ghadikidukan.in" />
+
+    <!-- optional: manifest for PWA, replace if you have one -->
+    <!-- <link rel="manifest" href="/site.webmanifest"> -->
   </head>
   <body>
     <div id="root"></div>
